[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate test utilities"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "substrate-test-utils"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
substrate-test-utils-derive = {version = "0.10.0-dev", path = "./derive"}
tokio = {version = "1.10", features = ["macros", "time"]}

[dev-dependencies]
sc-service = {version = "0.10.0-dev", path = "../client/service"}
trybuild = {version = "1.0.53", features = ["diff"]}
