[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "BEEFY Client gadget for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "beefy-gadget"
repository = "https://github.com/ultrastable-money/substrate"
version = "4.0.0-dev"

[dependencies]
fnv = "1.0.6"
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
thiserror = "1.0"
wasm-timer = "0.2.5"

codec = {version = "2.2.0", package = "parity-scale-codec", features = ["derive"]}
prometheus = {version = "0.10.0-dev", package = "substrate-prometheus-endpoint", path = "../../utils/prometheus"}

sp-api = {version = "4.0.0-dev", path = "../../primitives/api"}
sp-application-crypto = {version = "4.0.0", path = "../../primitives/application-crypto"}
sp-arithmetic = {version = "4.0.0", path = "../../primitives/arithmetic"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-core = {version = "4.1.0-dev", path = "../../primitives/core"}
sp-keystore = {version = "0.10.0", path = "../../primitives/keystore"}
sp-runtime = {version = "4.1.0-dev", path = "../../primitives/runtime"}

sc-chain-spec = {version = "4.0.0-dev", path = "../../client/chain-spec"}
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-keystore = {version = "4.0.0-dev", path = "../keystore"}
sc-network = {version = "0.10.0-dev", path = "../network"}
sc-network-gossip = {version = "0.10.0-dev", path = "../network-gossip"}
sc-utils = {version = "4.0.0-dev", path = "../utils"}

beefy-primitives = {version = "4.0.0-dev", path = "../../primitives/beefy"}

[dev-dependencies]
sc-network-test = {version = "0.8.0", path = "../network/test"}
sp-tracing = {version = "4.0.0", path = "../../primitives/tracing"}

strum = {version = "0.22", features = ["derive"]}
