[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate chain configurations."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-chain-spec"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
impl-trait-for-tuples = "0.2.1"
sc-chain-spec-derive = {version = "4.0.0-dev", path = "./derive"}
sc-network = {version = "0.10.0-dev", path = "../network"}
sc-telemetry = {version = "4.0.0-dev", path = "../telemetry"}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.68"
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
