[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate CLI interface."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-cli"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.10.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
chrono = "0.4.10"
fdlimit = "0.2.1"
futures = "0.3.9"
hex = "0.4.2"
libp2p = "0.39.1"
log = "0.4.11"
names = {version = "0.12.0", default-features = false}
parity-scale-codec = "2.3.1"
rand = "0.7.3"
regex = "1.5.4"
rpassword = "5.0.0"
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-keystore = {version = "4.0.0-dev", path = "../keystore"}
sc-network = {version = "0.10.0-dev", path = "../network"}
sc-service = {version = "0.10.0-dev", default-features = false, path = "../service"}
sc-telemetry = {version = "4.0.0-dev", path = "../telemetry"}
sc-tracing = {version = "4.0.0-dev", path = "../tracing"}
sc-utils = {version = "4.0.0-dev", path = "../utils"}
serde = "1.0.126"
serde_json = "1.0.68"
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-keyring = {version = "4.0.0-dev", path = "../../primitives/keyring"}
sp-keystore = {version = "0.10.0-dev", path = "../../primitives/keystore"}
sp-panic-handler = {version = "3.0.0", path = "../../primitives/panic-handler"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
sp-version = {version = "4.0.0-dev", path = "../../primitives/version"}
structopt = "0.3.8"
thiserror = "1.0.21"
tiny-bip39 = "0.8.2"
tokio = {version = "1.10", features = ["signal", "rt-multi-thread"]}

[dev-dependencies]
tempfile = "3.1.0"

[features]
wasmtime = [
  "sc-service/wasmtime",
]
