[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Client backend that uses RocksDB database as storage."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-client-db"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.10.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", features = [
  "derive",
]}
hash-db = "0.15.2"
kvdb = "0.10.0"
kvdb-memorydb = "0.10.0"
kvdb-rocksdb = {version = "0.14.0", optional = true}
linked-hash-map = "0.5.4"
log = "0.4.8"
parking_lot = "0.11.1"

parity-db = {version = "0.3.5", optional = true}
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-state-db = {version = "0.10.0-dev", path = "../state-db"}
sp-arithmetic = {version = "4.0.0-dev", path = "../../primitives/arithmetic"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-core = {version = "4.0.0", path = "../../primitives/core"}
sp-database = {version = "4.0.0-dev", path = "../../primitives/database"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
sp-state-machine = {version = "0.10.0-dev", path = "../../primitives/state-machine"}
sp-trie = {version = "4.0.0-dev", path = "../../primitives/trie"}

[dev-dependencies]
kvdb-rocksdb = "0.14.0"
quickcheck = "1.0.3"
sp-tracing = {version = "4.0.0", path = "../../primitives/tracing"}
substrate-test-runtime-client = {version = "2.0.0", path = "../../test-utils/runtime/client"}
tempfile = "3"

[features]
default = []
test-helpers = []
with-kvdb-rocksdb = ["kvdb-rocksdb"]
with-parity-db = ["parity-db"]
