[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "components for a light client"
documentation = "https://docs.rs/sc-light"
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-light"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
hash-db = "0.15.2"
parking_lot = "0.11.1"
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-executor = {version = "0.10.0-dev", path = "../executor"}
sp-api = {version = "4.0.0-dev", path = "../../primitives/api"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-externalities = {version = "0.10.0-dev", path = "../../primitives/externalities"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
sp-state-machine = {version = "0.10.0-dev", path = "../../primitives/state-machine"}

[features]
default = []
