[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Gossiping for the Substrate network protocol"
documentation = "https://docs.rs/sc-network-gossip"
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-network-gossip"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.10.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.9"
futures-timer = "3.0.1"
libp2p = {version = "0.40.0", default-features = false}
log = "0.4.8"
lru = "0.7.0"
prometheus-endpoint = {package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../utils/prometheus"}
sc-network = {version = "0.10.0-dev", path = "../network"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
tracing = "0.1.29"

[dev-dependencies]
async-std = "1.10.0"
quickcheck = "1.0.3"
substrate-test-runtime-client = {version = "2.0.0", path = "../../test-utils/runtime/client"}
