[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate network protocol"
documentation = "https://docs.rs/sc-network"
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-network"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.10.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.8"

[dependencies]
async-std = "1.10.0"
async-trait = "0.1"
asynchronous-codec = "0.5"
bitflags = "1.3.2"
bytes = "1"
cid = "0.6.0"
codec = {package = "parity-scale-codec", version = "2.0.0", features = [
  "derive",
]}
derive_more = "0.99.2"
either = "1.5.3"
fnv = "1.0.6"
fork-tree = {version = "3.0.0", path = "../../utils/fork-tree"}
futures = "0.3.9"
futures-timer = "3.0.2"
hex = "0.4.0"
ip_network = "0.4.0"
libp2p = "0.39.1"
linked-hash-map = "0.5.4"
linked_hash_set = "0.1.3"
log = "0.4.8"
lru = "0.6.6"
parking_lot = "0.11.1"
pin-project = "1.0.8"
prometheus-endpoint = {package = "substrate-prometheus-endpoint", version = "0.9.0", path = "../../utils/prometheus"}
prost = "0.8"
rand = "0.7.2"
sc-block-builder = {version = "0.10.0-dev", path = "../block-builder"}
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-consensus = {version = "0.10.0-dev", path = "../consensus/common"}
sc-peerset = {version = "4.0.0-dev", path = "../peerset"}
sc-utils = {version = "4.0.0-dev", path = "../utils"}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.68"
smallvec = "1.7.0"
sp-arithmetic = {version = "4.0.0-dev", path = "../../primitives/arithmetic"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-consensus = {version = "0.10.0-dev", path = "../../primitives/consensus/common"}
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-finality-grandpa = {version = "4.0.0-dev", path = "../../primitives/finality-grandpa"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
thiserror = "1"
unsigned-varint = {version = "0.6.0", features = [
  "futures",
  "asynchronous_codec",
]}
void = "1.0.2"
zeroize = "1.4.2"

[dev-dependencies]
assert_matches = "1.3"
libp2p = {version = "0.39.1", default-features = false}
quickcheck = "1.0.3"
rand = "0.7.2"
sp-test-primitives = {version = "2.0.0", path = "../../primitives/test-primitives"}
sp-tracing = {version = "4.0.0-dev", path = "../../primitives/tracing"}
substrate-test-runtime = {version = "2.0.0", path = "../../test-utils/runtime"}
substrate-test-runtime-client = {version = "2.0.0", path = "../../test-utils/runtime/client"}
tempfile = "3.1.0"

[features]
default = []
