[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Connectivity manager based on reputation"
documentation = "https://docs.rs/sc-peerset"
edition = "2021"
homepage = "http://parity.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-peerset"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.9"
libp2p = {version = "0.39.1", default-features = false}
log = "0.4.8"
sc-utils = {version = "4.0.0-dev", path = "../utils"}
serde_json = "1.0.68"
wasm-timer = "0.2"

[dev-dependencies]
rand = "0.7.2"
