[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Basic metrics for block production."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-proposer-metrics"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
prometheus-endpoint = {package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.9.0"}
