[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate RPC interfaces."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-rpc-api"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.10.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
futures = "0.3.16"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
log = "0.4.8"
parking_lot = "0.11.1"
thiserror = "1.0"

sc-chain-spec = {path = "../chain-spec", version = "4.0.0-dev"}
sc-transaction-pool-api = {version = "4.0.0-dev", path = "../transaction-pool/api"}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.71"
sp-core = {version = "4.0.0", path = "../../primitives/core"}
sp-rpc = {version = "4.0.0-dev", path = "../../primitives/rpc"}
sp-runtime = {path = "../../primitives/runtime", version = "4.0.0-dev"}
sp-tracing = {version = "4.0.0", path = "../../primitives/tracing"}
sp-version = {version = "4.0.0-dev", path = "../../primitives/version"}
