[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate RPC servers."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-rpc-server"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
http = {package = "jsonrpc-http-server", version = "18.0.0"}
ipc = {package = "jsonrpc-ipc-server", version = "18.0.0"}
jsonrpc-core = "18.0.0"
log = "0.4.8"
prometheus-endpoint = {package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.9.0"}
pubsub = {package = "jsonrpc-pubsub", version = "18.0.0"}
serde_json = "1.0.68"
tokio = "1.10"
ws = {package = "jsonrpc-ws-server", version = "18.0.0"}
