[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate Client RPC"
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-rpc"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
futures = "0.3.16"
hash-db = {version = "0.15.2", default-features = false}
jsonrpc-pubsub = "18.0.0"
lazy_static = {version = "1.4.0", optional = true}
log = "0.4.8"
parking_lot = "0.11.1"
rpc = {package = "jsonrpc-core", version = "18.0.0"}
sc-block-builder = {version = "0.10.0-dev", path = "../block-builder"}
sc-chain-spec = {version = "4.0.0-dev", path = "../chain-spec"}
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-rpc-api = {version = "0.10.0-dev", path = "../rpc-api"}
sc-tracing = {version = "4.0.0-dev", path = "../tracing"}
sc-transaction-pool-api = {version = "4.0.0-dev", path = "../transaction-pool/api"}
sc-utils = {version = "4.0.0-dev", path = "../utils"}
serde_json = "1.0.68"
sp-api = {version = "4.0.0-dev", path = "../../primitives/api"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-keystore = {version = "0.10.0-dev", path = "../../primitives/keystore"}
sp-offchain = {version = "4.0.0-dev", path = "../../primitives/offchain"}
sp-rpc = {version = "4.0.0-dev", path = "../../primitives/rpc"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
sp-session = {version = "4.0.0-dev", path = "../../primitives/session"}
sp-version = {version = "4.0.0-dev", path = "../../primitives/version"}

[dev-dependencies]
assert_matches = "1.3.0"
lazy_static = "1.4.0"
sc-network = {version = "0.10.0-dev", path = "../network"}
sc-transaction-pool = {version = "4.0.0-dev", path = "../transaction-pool"}
sp-consensus = {version = "0.10.0-dev", path = "../../primitives/consensus/common"}
sp-io = {version = "4.0.0-dev", path = "../../primitives/io"}
substrate-test-runtime-client = {version = "2.0.0", path = "../../test-utils/runtime/client"}

[features]
test-helpers = ["lazy_static"]
