[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate service. Starts a thread that spins up the network, client, and extrinsic pool. Manages communication between them."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-service"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.10.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["db"]
# The RocksDB feature activates the RocksDB database backend. If it is not activated, and you pass
# a path to a database, an error will be produced at runtime.
db = ["sc-client-db/with-kvdb-rocksdb", "sc-client-db/with-parity-db"]
wasmtime = ["sc-executor/wasmtime"]
# exposes the client type
test-helpers = []

[dependencies]
async-trait = "0.1.50"
codec = {package = "parity-scale-codec", version = "2.0.0"}
directories = "4.0.1"
exit-future = "0.2.0"
futures = "0.3.16"
futures-timer = "3.0.1"
hash-db = "0.15.2"
jsonrpc-core = "18.0"
jsonrpc-pubsub = "18.0"
log = "0.4.11"
parity-util-mem = {version = "0.10.2", default-features = false, features = [
  "primitive-types",
]}
parking_lot = "0.11.2"
pin-project = "1.0.10"
prometheus-endpoint = {package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.10.0-dev"}
rand = "0.7.3"
sc-block-builder = {version = "0.10.0-dev", path = "../block-builder"}
sc-chain-spec = {version = "4.0.0-dev", path = "../chain-spec"}
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-client-db = {version = "0.10.0-dev", default-features = false, path = "../db"}
sc-consensus = {version = "0.10.0-dev", path = "../../client/consensus/common"}
sc-executor = {version = "0.10.0-dev", path = "../executor"}
sc-informant = {version = "0.10.0-dev", path = "../informant"}
sc-keystore = {version = "4.0.0-dev", path = "../keystore"}
sc-network = {version = "0.10.0-dev", path = "../network"}
sc-offchain = {version = "4.0.0-dev", path = "../offchain"}
sc-rpc = {version = "4.0.0-dev", path = "../rpc"}
sc-rpc-server = {version = "4.0.0-dev", path = "../rpc-servers"}
sc-telemetry = {version = "4.0.0-dev", path = "../telemetry"}
sc-tracing = {version = "4.0.0-dev", path = "../tracing"}
sc-transaction-pool = {version = "4.0.0-dev", path = "../transaction-pool"}
sc-transaction-pool-api = {version = "4.0.0-dev", path = "../transaction-pool/api"}
sc-utils = {version = "4.0.0-dev", path = "../utils"}
serde = "1.0.132"
serde_json = "1.0.74"
sp-api = {version = "4.0.0-dev", path = "../../primitives/api"}
sp-application-crypto = {version = "4.0.0", path = "../../primitives/application-crypto"}
sp-block-builder = {version = "4.0.0-dev", path = "../../primitives/block-builder"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-consensus = {version = "0.10.0-dev", path = "../../primitives/consensus/common"}
sp-core = {version = "4.1.0-dev", path = "../../primitives/core"}
sp-externalities = {version = "0.10.0", path = "../../primitives/externalities"}
sp-inherents = {version = "4.0.0-dev", path = "../../primitives/inherents"}
sp-keystore = {version = "0.10.0", path = "../../primitives/keystore"}
sp-runtime = {version = "4.1.0-dev", path = "../../primitives/runtime"}
sp-session = {version = "4.0.0-dev", path = "../../primitives/session"}
sp-state-machine = {version = "0.10.0", path = "../../primitives/state-machine"}
sp-storage = {version = "4.0.0", path = "../../primitives/storage"}
sp-tracing = {version = "4.0.0", path = "../../primitives/tracing"}
sp-transaction-pool = {version = "4.0.0-dev", path = "../../primitives/transaction-pool"}
sp-transaction-storage-proof = {version = "4.0.0-dev", path = "../../primitives/transaction-storage-proof"}
sp-trie = {version = "4.0.0", path = "../../primitives/trie"}
sp-version = {version = "4.0.0-dev", path = "../../primitives/version"}
tempfile = "3.1.0"
thiserror = "1.0.30"
tokio = {version = "1.15", features = ["time", "rt-multi-thread"]}
tracing = "0.1.29"
tracing-futures = {version = "0.2.4"}

[dev-dependencies]
async-std = {version = "1.10.0", default-features = false}
substrate-test-runtime = {version = "2.0.0", path = "../../test-utils/runtime/"}
substrate-test-runtime-client = {version = "2.0.0", path = "../../test-utils/runtime/client"}
