[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "State database maintenance. Handles canonicalization and pruning in the database."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-state-db"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "0.10.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", features = ["derive"]}
log = "0.4.11"
parity-util-mem = {version = "0.10.2", default-features = false, features = ["primitive-types"]}
parity-util-mem-derive = "0.1.0"
parking_lot = "0.11.1"
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sp-core = {version = "4.0.0", path = "../../primitives/core"}
