[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Instrumentation implementation for substrate."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-tracing"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.13"
chrono = "0.4.19"
lazy_static = "1.4.0"
libc = "0.2.105"
log = {version = "0.4.8"}
once_cell = "1.8.0"
parking_lot = "0.11.1"
regex = "1.5.4"
rustc-hash = "1.1.0"
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-rpc-server = {version = "4.0.0-dev", path = "../rpc-servers"}
sc-tracing-proc-macro = {version = "4.0.0-dev", path = "./proc-macro"}
serde = "1.0.126"
sp-api = {version = "4.0.0-dev", path = "../../primitives/api"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-rpc = {version = "4.0.0-dev", path = "../../primitives/rpc"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
sp-tracing = {version = "4.0.0-dev", path = "../../primitives/tracing"}
thiserror = "1.0.21"
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.2.25", features = ["parking_lot"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "bench"
