[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate transaction pool implementation."
edition = "2021"
homepage = "https://substrate.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-transaction-pool"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
futures = "0.3.16"
intervalier = "0.4.0"
linked-hash-map = "0.5.4"
log = "0.4.8"
parity-util-mem = {version = "0.10.0", default-features = false, features = ["primitive-types"]}
parking_lot = "0.11.1"
prometheus-endpoint = {package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.9.0"}
retain_mut = "0.1.4"
sc-client-api = {version = "4.0.0-dev", path = "../api"}
sc-transaction-pool-api = {version = "4.0.0-dev", path = "./api"}
sc-utils = {version = "4.0.0-dev", path = "../utils"}
serde = {version = "1.0.126", features = ["derive"]}
sp-api = {version = "4.0.0-dev", path = "../../primitives/api"}
sp-blockchain = {version = "4.0.0-dev", path = "../../primitives/blockchain"}
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-runtime = {version = "4.0.0-dev", path = "../../primitives/runtime"}
sp-tracing = {version = "4.0.0-dev", path = "../../primitives/tracing"}
sp-transaction-pool = {version = "4.0.0-dev", path = "../../primitives/transaction-pool"}
thiserror = "1.0.21"

[dev-dependencies]
assert_matches = "1.3.0"
codec = {package = "parity-scale-codec", version = "2.0.0"}
criterion = "0.3"
hex = "0.4"
sc-block-builder = {version = "0.10.0-dev", path = "../block-builder"}
sp-consensus = {version = "0.10.0-dev", path = "../../primitives/consensus/common"}
substrate-test-runtime = {version = "2.0.0", path = "../../test-utils/runtime"}
substrate-test-runtime-client = {version = "2.0.0", path = "../../test-utils/runtime/client"}
substrate-test-runtime-transaction-pool = {version = "2.0.0", path = "../../test-utils/runtime/transaction-pool"}

[[bench]]
harness = false
name = "basics"

[features]
test-helpers = []
