[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "I/O for Substrate runtimes"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "sc-utils"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[dependencies]
futures = "0.3.9"
futures-timer = "3.0.2"
lazy_static = "1.4.0"
prometheus = {version = "0.13.0", default-features = false}

[features]
default = ["metered"]
metered = []
