[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME asset management pallet"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-assets"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = {version = "4.1.0-dev", default-features = false, path = "../../primitives/runtime"}
# Needed for type-safe access to storage DB.
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}

[dev-dependencies]
pallet-balances = {version = "4.0.0-dev", path = "../balances"}
sp-core = {version = "4.1.0-dev", path = "../../primitives/core"}
sp-io = {version = "4.0.0", path = "../../primitives/io"}
sp-std = {version = "4.0.0", path = "../../primitives/std"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
]
try-runtime = ["frame-support/try-runtime"]
