[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME AURA consensus pallet"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-aura"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"]}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
pallet-timestamp = {version = "4.0.0-dev", default-features = false, path = "../timestamp"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-application-crypto = {version = "4.0.0", default-features = false, path = "../../primitives/application-crypto"}
sp-consensus-aura = {version = "0.10.0-dev", path = "../../primitives/consensus/aura", default-features = false}
sp-runtime = {version = "4.1.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

[dev-dependencies]
sp-core = {version = "4.1.0-dev", default-features = false, path = "../../primitives/core"}
sp-io = {version = "4.0.0-dev", path = "../../primitives/io"}

[features]
default = ["std"]
std = [
  "sp-application-crypto/std",
  "codec/std",
  "scale-info/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "sp-consensus-aura/std",
  "frame-system/std",
  "pallet-timestamp/std",
]
try-runtime = ["frame-support/try-runtime"]
