[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Block and Uncle Author tracking for the FRAME"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-authorship"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
  "derive",
]}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
impl-trait-for-tuples = "0.2.1"
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-authorship = {version = "4.0.0-dev", default-features = false, path = "../../primitives/authorship"}
sp-runtime = {version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0-dev", default-features = false, path = "../../primitives/std"}

[dev-dependencies]
sp-core = {version = "4.0.0-dev", path = "../../primitives/core"}
sp-io = {version = "4.0.0-dev", path = "../../primitives/io"}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-support/std",
  "frame-system/std",
  "sp-authorship/std",
]
try-runtime = ["frame-support/try-runtime"]
