[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Consensus extension module for BABE consensus. Collects on-chain randomness from VRF outputs and manages epoch transitions."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-babe"
readme = "README.md"
repository = "https://github.com/ultrastable-money/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
log = {version = "0.4.14", default-features = false}
pallet-authorship = {version = "4.0.0-dev", default-features = false, path = "../authorship"}
pallet-session = {version = "4.0.0-dev", default-features = false, path = "../session"}
pallet-timestamp = {version = "4.0.0-dev", default-features = false, path = "../timestamp"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}
sp-application-crypto = {version = "4.0.0", default-features = false, path = "../../primitives/application-crypto"}
sp-consensus-babe = {version = "0.10.0-dev", default-features = false, path = "../../primitives/consensus/babe"}
sp-consensus-vrf = {version = "0.10.0-dev", default-features = false, path = "../../primitives/consensus/vrf"}
sp-io = {version = "4.0.0", default-features = false, path = "../../primitives/io"}
sp-runtime = {version = "4.1.0-dev", default-features = false, path = "../../primitives/runtime"}
sp-session = {version = "4.0.0-dev", default-features = false, path = "../../primitives/session"}
sp-staking = {version = "4.0.0-dev", default-features = false, path = "../../primitives/staking"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

[dev-dependencies]
frame-election-provider-support = {version = "4.0.0-dev", path = "../election-provider-support"}
pallet-balances = {version = "4.0.0-dev", path = "../balances"}
pallet-offences = {version = "4.0.0-dev", path = "../offences"}
pallet-staking = {version = "4.0.0-dev", path = "../staking"}
pallet-staking-reward-curve = {version = "4.0.0-dev", path = "../staking/reward-curve"}
sp-core = {version = "4.1.0-dev", path = "../../primitives/core"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-authorship/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "sp-application-crypto/std",
  "sp-consensus-babe/std",
  "sp-consensus-vrf/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "log/std",
]
try-runtime = ["frame-support/try-runtime"]
